[gd_scene load_steps=41 format=2]

[ext_resource path="res://Sprites/Characters/Mid/spr_midIdle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Characters/Mid/spr_midWalk.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/Mid/spr_midJumpFall.png" type="Texture" id=4]
[ext_resource path="res://SFX/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Sprites/spr_lifeBar.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Characters/Mid/spr_kill.png" type="Texture" id=7]
[ext_resource path="res://SFX/explode.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Characters/Mid/spr_win.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 37 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 37 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 27.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 12 )
animation = "Win"
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 4, 9.5 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 15.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 16, 16 )
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 16, 16 )

[node name="SprLifeBar" type="Sprite" parent="CanvasLayer"]
position = Vector2( 51, 17.5 )
texture = ExtResource( 6 )
hframes = 4

[node name="Transition" parent="." instance=ExtResource( 9 )]
position = Vector2( -152, 16 )

[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_PlayerSprite_animation_finished"]
